TC-002/002-pod-invalid.yaml
# pod-invalid-image.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-invalid-image
spec:
  containers:
    - name: nginx
      image: nginx:1.25
