TC-002/002-pod-valid.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-valid-image
spec:
  containers:
    - name: web-app-frontend
      image: bmppa/web-app-backend:v1
